--- a/pizza-master/index.html
+++ b/pizza-master/index.html
@@ -20,11 +20,11 @@
   </div>
   <div class="textContainer">
     <h1>Pizza!</h1>
-    <p>My Favorite Toppings: </p>
+    <p>Jared's Favorite Toppings: </p>
     <ul>
       <li>Pepperoni</li>
-      <li>Mozzarella Cheese</li>
-      <li>Mushrooms</li>
+      <li>Heirloom Tomato Margherita</li>
+      <li>Mushrooms and Olives</li>
     </ul>
   </div>
 </div>
